@startuml macowins_diagrama

interface EstadoPrenda {
    Double precioSegunEstado(Double)
}

class PrendaNueva 
EstadoPrenda <|.. PrendaNueva

class Promocion {
    Double precioDescontado
}
EstadoPrenda <|.. Promocion

class Liquidacion
EstadoPrenda <|.. Liquidacion

'''''''''''''''''''''''''''''

class Prenda {
    Double precioBase
    Double precioDeVenta()
}
Prenda --> "1" EstadoPrenda

enum TipoPrenda {
    CAMISA
    PANTALON
    SACO
}
Prenda --> "1" TipoPrenda


'''''''''''''''''''''''''''''

class ArticuloVenta{
    Integer cantidad
    Double precio()
}
ArticuloVenta --> "1" Prenda

interface MedioDePago{
    Double precioConRecargo(Double)
}

class Efectivo
MedioDePago <|.. Efectivo

class Tarjeta {
    Integer cuotas
    Integer coeficiente
}
MedioDePago <|.. Tarjeta

class Venta {
    LocalDate fecha
    Double ganancia()
}
Venta --> "1" MedioDePago
Venta --> "1..*" ArticuloVenta

'''''''''''''''''''''''''''''

class Negocio {
    Double gananciaPorFecha(LocalDate)
    registrar(Venta)
}
Negocio --> "1..*" Venta

@enduml